--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,14 @@
 {
   "name": "co-edit",
-  "authors": [
-    "Boris van Hoytema <boris@vanhoytema.com>"
-  ],
-  "description": "Suggestions for text on websites in a widget",
-  "main": "index.html",
-  "license": "C",
-  "homepage": "",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "description": "Widget to community edit text",
+  "main": "co-edit.htm",
   "dependencies": {
-    "polymer": "^1.8.1"
+    "polymer": "Polymer/polymer#^1.4.0"
+  },
+  "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "web-component-tester": "^4.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   }
 }
